Minor edits to main notebook

--- a/1.Mapping_Stations.ipynb
+++ b/1.Mapping_Stations.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Engineering"
+    "# Data Engineering"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "# Analysis"
    ]
   },
   {
@@ -586,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plots"
+    "# Transfer Ratio Plots"
    ]
   },
   {
@@ -643,12 +643,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Top 20% "
+    "### Top 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-31T22:17:07.570656Z",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
     }
    ],
    "source": [
-    "# 4.2% of all metrocard users are transferring and 3.8% of all omny users are transferring\n",
+    "# 4.2% of all metrocard users are transferring and 3.9% of all omny users are transferring\n",
     "payment_method_sum_df.T['sum_transfers'] / payment_method_sum_df.T['sum_ridership']"
    ]
   },
